<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Base.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/standard_padding"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/recycler_message_title_text_view"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/standard_padding_small"
            android:text="@string/default_message_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/recycler_message_up_vote_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="@dimen/standard_padding_small"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_expand_less_black_24dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/default_message_up_votes" />

                <ImageButton
                    android:id="@+id/recycler_message_down_vote_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="@dimen/standard_padding_small"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_expand_more_black_24dp"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <TextView
                android:id="@+id/recycler_message_body_text_view"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:lineSpacingMultiplier="1.25"
                android:padding="@dimen/standard_padding_small"
                android:text="@string/default_message_body" />

        </LinearLayout>

        <Button
            android:id="@+id/recycler_message_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/standard_padding_small"
            android:layout_marginEnd="@dimen/standard_padding"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/default_profile_name" />

    </LinearLayout>

</android.support.v7.widget.CardView>